feat(server): added categories endpoint on memos
